# mcp-central

./: AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  publish.yml
src/: api.ts  cli.ts  client.ts  config.test.ts  config.ts  daemon.ts  index.ts  logger.test.ts  logger.ts  main.rs  manager.ts  router.test.ts  router.ts  server.ts  types.test.ts  types.ts
src/aggregator/: router.rs
src/client/: manager.rs  mod.rs  stdio.rs
src/config/: loader.rs  types.rs
src/protocol/: types.rs
src/server/: http.rs  stdio.rs
