[package]
name = "mcp-bridge"
version = "0.1.0"
edition = "2021"
description = "MCP aggregator/proxy - connect multiple MCP servers through a single endpoint"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
dirs = "5"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
